
	* include/openbabel/pointgroup.h, src/pointgroup.cpp: New class to
	wrap  S. Patchkovskii's brute-force 3D point group symmetry
	code. Still needs some updates from original C code, particularly
	to make it "less chatty."

	* tools/Makefile.am, tools/obsym.cpp: New tool to detect point
	group symmetry and eventually write newly "symmetrized" coordinates.

2007-12-03  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp, include/openbabel/forcefield.h: Added
	IsSetupNeeded to limit the number of calls to Setup, this improves
	performance for applications like avogadro (AutoOpt tool)

2007-12-02 Chris Morley

	* src/forcefield.cpp, include/openbabel/forcefield.h,
	forcefieldghemical.h, forcefieldmm2.h, forcefieldmmff94.h
	MakeNewInstance as pure virtual function to OBForceField
	for use in multithreaded environments.

2007-12-02  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp, include/openbabel/forcefield.h: Added support
	to ignore and fix atoms. see doxygen documentation for more info.

2007-12-02  Tim Vandermeersch <tim.vandermeersch@gmail.com>

	* src/forcefield.cpp, include/openbabel/forcefield.h: Split 
	SystematicRotorSearch into ...Initialize and ...NextConformer. This 
	alows a progress bar to be displayed in avogadro.

	* src/forcefields/forcefieldghemical.cpp: Removed (commented out)
	special treatment of linear angles, wasn't workiung correctly, needs
	to be looked at...

2007-11-30  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* src/chains.cpp: Improve speed when clearing residue info in
	molecules with no residues.

	* include/openbabel/atom.h, src/atom.cpp: New method GetResidue()
	to optionally request no chain perception. Useful in
	builders/editors (e.g., Avogadro).

2007-11-28  Geoffrey Hutchison  <babel@geoffhutchison.net>

	* scripts/Makefile.am, tools/Makefile.am: Fixes for building
	outside of the source tree.

	* test/iterators.cpp: Fix #include for OBRing. Now compiles cleanly.
